Fix production build: copy HTML views to dist folder
- Add postbuild script to copy src/views to dist/views
- Fix path resolution in feedback routes using path.resolve
- Ensure feedback-thank-you.html is available in production
- Resolve ENOENT error for missing HTML file in dist folder

--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -11,7 +11,7 @@
     "start:compiled": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit",
-    "postbuild": "cp -r uploads dist/ 2>/dev/null || mkdir -p dist/uploads"
+    "postbuild": "cp -r uploads dist/ 2>/dev/null || mkdir -p dist/uploads && cp -r src/views dist/ 2>/dev/null || mkdir -p dist/views"
   },
   "keywords": [
     "beauty",
