--- a/beauty-flow-backend/tsconfig.json
+++ b/beauty-flow-backend/tsconfig.json
@@ -27,5 +27,8 @@
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts"],
+  "ts-node": {
+    "files": true
+  }
 }
